2004-05-15 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/configure.ac:  Escape brackes in regexp for
	processing by m4; remove "componentsdir" substitution.
	* mozilla-plugin/src/Makefile.am:  Install typelib in the
	plugins directory.

2004-05-15 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field.h:  Quell complaint from
	doxygen.

2004-05-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  Fixed name
	of combined_vertex_data_ for cl 13.10.3077.

2004-05-09 Braden McDaniel  <braden@endoframe.com>

	* openvrml.spec.in:  Corrected description of lookat RPM to
	reflect the change to using SDL; define NDEBUG when configuring.

2004-05-09 Braden McDaniel  <braden@endoframe.com>

	* Makefile.am:  Build the Mozilla plug-in before building the
	tests.

2004-05-08 Braden McDaniel  <braden@endoframe.com>

	Doxygen 1.3.7 doesn't like out-of-line documentation of friends
	using "@var".

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/field.cpp
	* src/libopenvrml/openvrml/node_ptr.cpp
	* src/libopenvrml/openvrml/scope.cpp
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h
	* src/libopenvrml/openvrml/vrml97node.cpp

2004-05-05 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp:  Moved implementation of
	nsIClassInfo from a mix-in class to ScriptablePeer.

2004-05-05 Braden McDaniel  <braden@endoframe.com>

	Made the Mozilla plug-in scriptable.  Only a trivial amount of
	functionality is currently exposed: you can get the name and
	version of the plug-in.

	* openvrml.spec.in:  Install the type library.
	* mozilla-plugin/configure.ac:  Locate Mozilla's components
	directory.
	* mozilla-plugin/src/Makefile.am
	* mozilla-plugin/src/openvrml.cpp
	* mozilla-plugin/src/openvrml.idl:  Added file.  An adaptation
	of the VRML97 EAI to XPCOM.

2004-05-03 Braden McDaniel  <braden@endoframe.com>
